[package]
name = "ak_monitor_client_rs"
version = "0.0.1"
edition = "2021"

[dependencies]
tokio = { version = "1.42.0", default-features = false, features = ["rt-multi-thread", "macros", "time"] }
tokio-tungstenite = { version = "0.24.0", default-features = true }
futures-util = { version = "0.3.31", default-features = false }
serde = { version = "1.0.215", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.133", default-features = false, features = ["std"] }
flate2 = { version = "1.0.35", default-features = false, features = ["rust_backend"] }
sysinfo = { version = "0.33.0", default-features = false, features = ["system"] }
whoami = "2.0.0-pre.0"
heim-virt = "0.1.0-rc.1"
systemstat = "0.2.3"
clap = { version = "4.5.22", default-features = false, features = ["help", "derive", "color", "std"] }
log = { version = "0.4.22", default-features = false, features = ["std"] }
simple_logger = "5.0.0"

[profile.release]
lto = true
strip = true

[build]
rustflags = ["-C", "opt-level=z", "-C", "panic=abort"]
